Bug 308008 - Filtering from checked accounts only not working for POP3 accounts
Summary: Filtering from checked accounts only not working for POP3 accounts
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Filter Agent (other bugs)
Version First Reported In: 4.9
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-07 09:43 UTC by Graeme Hewson
Modified: 2013-07-27 07:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2012-10-07 09:43:55 UTC
In Filter Rules, Advanded tab, there's a radio button to apply the filter to incoming messages from checked accounts only. However, the filter is not applied to any POP3 accounts, only to Local Folders (type maildir).

Reproducible: Always

Steps to Reproduce:
1. In Advanced tab of a filter, select "Apply this filter to incoming messages:" and "from checked accounts only".
2. Select a POP3 account. Unselect all other accounts, including Local Folders.
3. Test filter while viewing filter log.
Actual Results:  
Filter isn't applied.


I don't know if it's relevant, but I have several POP3 accounts. I have no IMAP accounts. The Local Folders account was created automatically when I installed kmail; the folder is the default ~/.local/share/local-mail. I also have another maildir account using my subdirectory in /var/spool/maildir.
Comment 1 András Manţia 2012-10-26 09:07:15 UTC
Just curious, how could you report this for KMail2/Filtering, when that product is not enabled for new bug reports (as they should go to akonadi/mail filter agent).
Comment 2 Graeme Hewson 2012-10-26 09:58:01 UTC
The Filtering component is in https://bugs.kde.org/enter_bug.cgi?product=kmail2&format=guided. Guess I didn't notice the warning in green not to report filter bugs in kmail2 (or it wasn't there at the time).
Comment 3 András Manţia 2012-10-26 10:05:51 UTC
Thanks, indeed it is still possible to report in such way, seems to be some bugzilla bug/misconfiguration. :( The warning was not there, I added the text to guide the users today.
Comment 4 Graeme Hewson 2013-04-23 13:28:34 UTC
Still happening in 4.10.2.

Filter log has only one line for a message:
 
[time] Begin filtering on message "<subject>" from "<from>" at "<date>"

No rules are evaluated when automatically filtering with "from checked accounts only" checked, and one POP3 account checked.
Comment 5 Laurent Montel 2013-04-23 16:43:46 UTC
I confirm it.
it can't work in KMail2, filtering is apply after that mail is moved in local folder
=> account == local folder , we don't know which account add emails in local folder.

=> so it will never work with actual method.
Comment 6 Laurent Montel 2013-06-10 11:27:49 UTC
Git commit e7497d686dfa0679059882a84cc7ecc4acd9a466 by Montel Laurent.
Committed on 10/06/2013 at 13:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 308008 - Filtering from checked accounts only not working for POP3 accounts

FIXED-IN: 4.11

M  +1    -0    resources/pop3/CMakeLists.txt
M  +5    -0    resources/pop3/pop3resource.cpp
A  +82   -0    resources/pop3/pop3resourceattribute.cpp     [License: GPL (v2)]
A  +45   -0    resources/pop3/pop3resourceattribute.h     [License: GPL (v2)]

http://commits.kde.org/kdepim-runtime/e7497d686dfa0679059882a84cc7ecc4acd9a466
Comment 7 Laurent Montel 2013-06-10 11:28:29 UTC
Git commit e7d6cb4cafaf19af5e9a00bcbefc30262cdbd763 by Montel Laurent.
Committed on 10/06/2013 at 13:28.
Pushed by mlaurent into branch 'master'.

Fix Bug 308008 - Filtering from checked accounts only not working for POP3 accounts

FIXED-IN: 4.11

M  +1    -0    mailfilteragent/CMakeLists.txt
M  +10   -1    mailfilteragent/mailfilteragent.cpp
A  +82   -0    mailfilteragent/pop3resourceattribute.cpp     [License: GPL (v2)]
A  +45   -0    mailfilteragent/pop3resourceattribute.h     [License: GPL (v2)]

http://commits.kde.org/kdepim/e7d6cb4cafaf19af5e9a00bcbefc30262cdbd763
Comment 8 Christian Trippe 2013-07-24 17:37:00 UTC
This bug is only partially fixed for me with KDE 4.11 RC1.

It works if the destination folder of the pop3 resource is the inbox, but not if it is another folder. Should I open a new report for this or should this one get reopened?
Comment 9 András Manţia 2013-07-26 04:59:28 UTC
That is a different issue, indeed right now only inbox is filtered.
Comment 10 Graeme Hewson 2013-07-26 05:22:10 UTC
Is that literally "inbox", or the destination folder (which might be something other than the default)?
Comment 11 Christian Trippe 2013-07-27 07:57:49 UTC
(In reply to comment #9)
> That is a different issue, indeed right now only inbox is filtered.

Thanks for the fast reply. I now opened bug 322871	for this issue.