Fix Bug 308008 - Filtering from checked accounts only not working for POP3 accounts

FIXED-IN: 4.11
BUG: 308008